# ChangeLog for x11-misc/oroborus-desklaunch
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/oroborus-desklaunch/ChangeLog,v 1.3 2012/05/05 04:53:49 jdhore Exp $

  05 May 2012; Jeff Horelick <jdhore@gentoo.org>
  oroborus-desklaunch-1.1.8.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*oroborus-desklaunch-1.1.8 (06 Nov 2011)

  06 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org>
  -oroborus-desklaunch-1.1.7.ebuild, +oroborus-desklaunch-1.1.8.ebuild:
  Version bump, drop old

*oroborus-desklaunch-1.1.7 (31 May 2010)

  31 May 2010; Kacper Kowalik <xarthisius@gentoo.org>
  +oroborus-desklaunch-1.1.7.ebuild,
  +files/oroborus-desklaunch-1.1.7-gentoo.diff, +metadata.xml:
  New ebuild for oroborus-desklaunch, formerly part of
  x11-wm/oroborus-extras
