@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST keylaunch_1.3.9.tar.gz 80286 RMD160 4660c6d90db28373134ab0cbf8d9c8d2888f0225 SHA1 1dc0b679aba8f08577e8280f6d5ed836a86c4e22 SHA256 213da77e9263e6aa7edbb1204402ef55d5daff2cd66add2cacbf84a1206da1ef
-EBUILD oroborus-keylaunch-1.3.9.ebuild 820 RMD160 6c03e1bb08e42f3b60a5a84e3ea824d7e54e84f8 SHA1 a1442f52ed39f63e744f02028afb5e14286dbda5 SHA256 26728d3f3b9d26f4f22b3263a8661af0e19f5776630f64ffb37d55c4b4cadb94
-MISC ChangeLog 455 RMD160 0771791d002db9f15c215ef3da6df1d9f55252a0 SHA1 afc5870b359154e9e4374a77191ec10af0b82e1c SHA256 5ac46e145a7bfc124d1a0fe467fe2af170a5e0a8e210f01d47be7a9a8592c0bb
+EBUILD oroborus-keylaunch-1.3.9.ebuild 803 RMD160 392957ab8e6b020fade3b37a6d2d7e9a63889871 SHA1 9cb7fc4d0a357f314ecdc4af7f8f5938ad0d5649 SHA256 566d70a007a084169447d6121c46bb36bc4af10bfdb7a9b23e2f902ac74f59ee
+MISC ChangeLog 579 RMD160 c71ed4e1c1409fb30e17e779526f75e6ed31a157 SHA1 8adc61a42aa3a4fb1ca189d3b83d7754b5ade4b1 SHA256 383cf2bb0297b29144cd40d2ba357e6b111b5e9c9e33ccbd15923488c35cf18f
 MISC metadata.xml 407 RMD160 fbc44519bcaf5d1543a39b8aaa0d22df3d2cd5f1 SHA1 e9ada0ca7c3033368558ac7e02fcc94ab60ba6c4 SHA256 c862f36103b9375d393b8f829684f6e51f0ecf07a52dce83598fbbbda5f511d7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iJwEAQECAAYFAkwD248ACgkQIiMqcbOVdxTkIQP/UlHUYHoHBj1xMwKOG65PWAue
-AOJ7n1HUCaKr04nWHdO1psU2YJ3QEd991MJ9ToLBPiuC7KZaNlucbPUCSFjGCbdp
-B4mQQLz/0CTfqYgQxwhEzM183fJy3jywak6ty6RpBMHUDrfnqoGh+TojT8ygn8Zp
-nt/xAeUkPtx7OyygaN0=
-=iD2b
+iF4EAREIAAYFAk/NDsMACgkQknrdDGLu8JAlUwD/d+VG1vlJBhWbxPzzIraYT/VC
+z9sMxlfGrIcFkpovMDAA/ifLc5ZlWV15eacV1PG3q7Nh3Z7LFHkDU1SXAlx0FeAx
+=L0Rp
 -----END PGP SIGNATURE-----
