@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/oroborus-desklaunch
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/oroborus-desklaunch/ChangeLog,v 1.3 2012/05/05 04:53:49 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/oroborus-desklaunch/ChangeLog,v 1.4 2012/06/04 19:36:28 xmw Exp $
+
+  04 Jun 2012; Michael Weber <xmw@gentoo.org> oroborus-desklaunch-1.1.8.ebuild:
+  Fix SRC_URI (reported by df, bug 416129)
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org>
   oroborus-desklaunch-1.1.8.ebuild:
